@@ -14,6 +14,7 @@
 - fix config old name lookup.
 - fix error handling on ldap bind fail.
 - fix direct mount stale instance flag reset.
+- fix direct map expire not set for initail empty map.
 
 21/04/2015 autofs-5.1.1
 =======================
